--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "release": "npm test && release-it -n -i patch",
+    "release:minor": "npm test && release-it -n -i minor",
+    "release:major": "npm test && release-it -n -i major"
   },
   "repository": {
     "type": "git",
@@ -18,9 +21,11 @@
   "license": "MIT",
   "devDependencies": {
     "@aptoma/eslint-config": "^7.0.1",
-    "eslint": "^7.26.0"
+    "auto-changelog": "^2.2.1",
+    "eslint": "^7.26.0",
+    "release-it": "^14.6.2"
   },
   "dependencies": {
-    "chia-farm-summary": "0.0.1"
+    "chia-farm-summary": "0.0.2"
   }
 }
